<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.spdx</groupId>
  <artifactId>spdx-maven-plugin</artifactId>
  <version>0.6.5-SNAPSHOT</version>
  <packaging>maven-plugin</packaging>

  <name>spdx-maven-plugin Maven Plugin</name>

  <url>https://github.com/goneall/spdx-maven-plugin</url>
  <description>Plugin for supporting SPDX in a Maven build.  See README.md</description>
  <organization>
  	<name>SPDX</name>
  	<url>http://spdx.org</url>
  </organization>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.build.outputTimestamp>1675930644</project.build.outputTimestamp>
    <maven.compiler.release>11</maven.compiler.release>
    <maven.version>3.8.5</maven.version>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.organization>spdx</sonar.organization>
    <sonar.projectKey>spdx-maven-plugin</sonar.projectKey>
<dependency-check-maven.version>8.0.1</dependency-check-maven.version>    
  </properties>
  <licenses>
      <license>
          <name>The Apache Software License, Version 2.0</name>
          <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
          <distribution>repo</distribution>
      </license>
  </licenses>
  <scm>
	<url>https://github.com/spdx/spdx-maven-plugin</url>
	<connection>scm:git:ssh://git@github.com:spdx/spdx-maven-plugin.git</connection>
	<developerConnection>scm:git:ssh://git@github.com:spdx/spdx-maven-plugin.git</developerConnection>
  </scm>
  <distributionManagement>
		<repository>
        	<id>ossrh</id>
			<name>spdx-maven-plugin</name>
        	<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    	</repository>
  </distributionManagement>
  <developers>
     <developer>
       <id>goneall</id>
       <name>Gary O'Neall</name>
       <email>gary@sourceauditor.com</email>
       <organization>SPDX</organization>
       <organizationUrl>http://spdx.org</organizationUrl>
     </developer>
   </developers>
  <dependencies>
    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-plugin-api</artifactId>
      <version>${maven.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.maven.plugin-tools</groupId>
      <artifactId>maven-plugin-annotations</artifactId>
      <version>3.6.4</version>
      <scope>provided</scope>
    </dependency>
	  <dependency>
	  	<groupId>org.spdx</groupId>
	  	<artifactId>java-spdx-library</artifactId>
	  	<version>1.1.4</version>
	  </dependency>
	  <dependency>
	  	<groupId>org.spdx</groupId>
	  	<artifactId>spdx-rdf-store</artifactId>
	  	<version>1.1.4</version>
	  </dependency>
	  <dependency>
	  	<groupId>org.spdx</groupId>
	  	<artifactId>spdx-jackson-store</artifactId>
	  	<version>1.1.4</version>
	  </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.apache.maven</groupId>
    	<artifactId>maven-core</artifactId>
    	<version>${maven.version}</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.maven.plugin-testing</groupId>
    	<artifactId>maven-plugin-testing-harness</artifactId>
    	<version>3.3.0</version>
    	<scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.apache.maven.shared</groupId>
    	<artifactId>file-management</artifactId>
    	<version>3.1.0</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.maven</groupId>
    	<artifactId>maven-artifact</artifactId>
    	<version>${maven.version}</version>
    </dependency>
    <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-compat</artifactId>
        <version>${maven.version}</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.maven</groupId>
    	<artifactId>maven-model</artifactId>
    	<version>${maven.version}</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.maven</groupId>
    	<artifactId>maven-repository-metadata</artifactId>
    	<version>${maven.version}</version>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <targetPath>resources</targetPath>
        <filtering>false</filtering>
        <directory>resources</directory>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
      <resource>
         <targetPath>META-INF</targetPath>
         <filtering>false</filtering>
         <directory>.</directory>
         <includes>
            <include>NOTICE</include>
            <include>LICENSE</include>
            <include>README.txt</include>
         </includes>
       </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <id>enforce-java</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireJavaVersion>
                  <version>${maven.compiler.release}</version>
                </requireJavaVersion>
              </rules>    
            </configuration>
          </execution>
        </executions>
      </plugin>		
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-compiler-plugin</artifactId>
		<version>3.6.1</version>
      </plugin>
	  <plugin>
		<groupId>org.owasp</groupId>
		<artifactId>dependency-check-maven</artifactId>
		<version>${dependency-check-maven.version}</version>
	  </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-plugin-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <goalPrefix>spdx</goalPrefix>
          <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
        </configuration>
        <executions>
          <execution>
            <id>mojo-descriptor</id>
            <goals>
              <goal>descriptor</goal>
            </goals>
          </execution>
          <execution>
            <id>help-goal</id>
            <goals>
              <goal>helpmojo</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
             <phase>verify</phase>
             <goals>
               <goal>jar-no-fork</goal>
             </goals>
           </execution>
         </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>run-its</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-invoker-plugin</artifactId>
            <version>1.7</version>
            <configuration>
              <debug>true</debug>
              <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
              <pomIncludes>
                <pomInclude>*/pom.xml</pomInclude>
              </pomIncludes>
              <postBuildHookScript>verify</postBuildHookScript>
              <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
              <settingsFile>src/it/settings.xml</settingsFile>
              <goals>
                <goal>clean</goal>
                <goal>test-compile</goal>
              </goals>
            </configuration>
            <executions>
              <execution>
                <id>integration-test</id>
                <goals>
                  <goal>install</goal>
                  <goal>integration-test</goal>
                  <goal>verify</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
    	<id>gpg-signing</id>
			<build>
				<plugins>
					<plugin>
		      			<groupId>org.apache.maven.plugins</groupId>
		      			<artifactId>maven-gpg-plugin</artifactId>
		      			<version>1.6</version>
		      			<executions>
		        			<execution>
		          				<id>sign-artifacts</id>
		          				<phase>verify</phase>
		          				<goals>
		            				<goal>sign</goal>
		          				</goals>
		          				<configuration>
		              				<keyname>${gpg.keyname}</keyname>
		              				<passphraseServerId>${gpg.keyname}</passphraseServerId>
		            			</configuration>
		        			</execution>
		      			</executions>
	    			</plugin>
				</plugins>
			</build>
    </profile>
  </profiles>
</project>
